BUG STAT-488: MAKE WAY FOR OTHER LOCALESSSS
QA: Button should not overlap in en,it,pt,ro.

--- a/app/styles/odysseus-base.sass
+++ b/app/styles/odysseus-base.sass
@@ -197,6 +197,12 @@ b
       position: absolute
       right: 10em
       top: 0
+      .locale_pt &
+        right: 15em
+      .locale_ro &
+        right: 14em
+      .locale_it &
+        right: 11.5em
 
       .details
         border-right: 1px solid $color_chrome_box_border
